next_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-service # Replace with your desired service name
spec:
  selector:
    app: next-app
  ports:
  - port: 80  # Adjust the external port if needed
    targetPort: 3000  # Internal port
    protocol: TCP
  type: NodePort #LoadBalancer   Adjust service type if needed
