hosts_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hosts-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - path: "/next"
            pathType: Prefix
            backend:
              service:
                name: next-service
                port:
                  number: 80
          # - path: "/credits"
            # pathType: Prefix
            # backend:
              # service:
                # name: next-service
                # port:
                  # number: 80
          # # Add catch-all paths for everything after / and /api/
          # - path: /**
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: next-service  # Replace with the appropriate service name
          #       port:
          #         number: 80  # Update port if needed
          # - path: /api/**
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: fastapi-service  # Replace with the appropriate service name
          #       port:
          #         number: 800  # Update port if needed
